Beispiel für Darstellung von Klasse, die zu groß ist für Minipage-Lösung: IEarablesConnection

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -120,13 +120,9 @@ hier kommt ein mal das Klassendiagramm rein mit Verweis auf den Anhang - valle
 \section{Klassenbeschreibung Model}
 \subsection{Bibliothek}
 
-\begin{minipage}[b]{0.3\textwidth}
 	\subsubsection{Interface IEarablesConnection}
 	
-	\end{minipage}
-	\begin{minipage}[c]{0.7\textwidth}
-	\includegraphics[width=1.5\textwidth]{bilder/BibPackageKlassen/IEarablesConnection.png}
-\end{minipage}
+	\includegraphics[width=\textwidth]{bilder/BibPackageKlassen/IEarablesConnection.png}
 
 \paragraph{Klassenbeschreibung:}
 Diese Klasse ist das Herz der Bibliothek. Sie ist die Schnittstellen, über die später kommuniziert werden kann. Hierbei handelt es sich um ein Interface um Mocking zu ermöglichen und so das Implementieren und Testen zu vereinfachen. Um eine BLE Verbindung herzustellen benutzt sie das \glqq Bluetooth LE Plugin for Xamarin\grqq{}.
