--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -991,7 +991,7 @@ Diese Klasse stellt die Ansicht des StepModes dar, solange kein Laufvorgang gest
 	\begin{itemize}
 	\item[+] \textbf{StepMode: Label} \\ Anzeige des Modusnamen Stepmode.
 	\item[+] \textbf{LastTrainingsDate: Label} \\ Anzeige für den letzten Trainingstag, an das Attribut LastDataTime aus dem Viewmodel gebunden.
-	\item[+] \textbf{StepsDoneLastTime: Label} \\ Anzeige für die am letzten Trainingstag gelaufenen Schritte, an das Attribut StepsDoneLastTIme aus dem Viewmodel gebunden.
+	\item[+] \textbf{StepsDoneLastTime: Label} \\ Anzeige für die am letzten Trainingstag gelaufenen Schritte, an das Attribut StepsDoneLastTime aus dem Viewmodel gebunden.
 	\item[+] \textbf{DistanceWalkedLastTime: Label} \\ Anzeige für die am letzten Trainingstag gelaufene Distanz, an das Attribut DistanceWalkedLastTime aus dem Viewmodel gebunden. 
 	\item[+] \textbf{Start: Button} \\ Button um den Laufvorgang zu starten. Feuert den StartActivityCommand aus dem Viewmodel.
 	\end{itemize}
@@ -1005,7 +1005,7 @@ Diese Klasse stellt die Ansicht des Stepmodes während eines laufenden Laufvorga
 	\item[+] \textbf{IsRunning: Label} \\ Zeigt an ob der Nutzer aktuell läuft oder steht, an das Attribut IsRunning aus dem Viewmodel gebunden.
 	\item[+] \textbf{StepCounter: Label} \\ Anzeige für Anzahl bisher gelaufener Schritte, an das Attribut StepCounter aus dem Viewmodel gebunden.
 	\item[+] \textbf{DistanceWalked: Label} \\ Anzeige der bisher gelaufenen Distanz, an das Attribut DistanceWalked aus dem Viewmodel gebunden.
-	\item[+] \textbf{StepFrequency: Label} \\ Anzeige der akutellen Schrittfrequenz, an das Attribut StepFrequency aus dem Viewmodel gebunden.
+	\item[+] \textbf{StepFrequency: Label} \\ Anzeige der aktuellen Schrittfrequenz, an das Attribut StepFrequency aus dem Viewmodel gebunden.
 	\item[+] \textbf{Stop: Button} \\ Button um den Laufvorgang zu stoppen. Feuert den StopActivityCommand aus dem Viewmodel.
 	\end{itemize}
 	
@@ -1027,7 +1027,7 @@ Diese Klasse stellt die Ansicht des Countmodes während eines laufenden Zählvor
 	\item[+] \textbf{CountMode: Label} \\ Anzeige des Modusnamen CountMode.
 	\item[+] \textbf{Timer: Label} \\ Anzeige für die seit dem Zählstart vergangene Zeit. Beinhaltet drei Spans für die Anzeige von Minuten, Sekunden und Millisekunden. Das Spans sind an die Attribute Minuten, Sekunden bzw. Millisekunden gebunden.
 	\item[+] \textbf{Counter: Label} \\ Anzeige für die Anzahl bisher ausgeführter Wiederholungen einer Activity. An das Attribut Counter aus dem Viewmodel gebunden.
-	\item[+] \textbf{SelectedActivity: Label} \\Anzeige für die ausgewählte Übung. An das Attribut SelectedActivity aus dem Viewmodel gebunden.
+	\item[+] \textbf{SelectedActivity: Label} \\ Anzeige für die ausgewählte Übung. An das Attribut SelectedActivity aus dem Viewmodel gebunden.
 	\item[+] \textbf{Stop: Button} \\ Button um den Zählvorgang zu stoppen. Feuert den StopActivityCommand aus dem Viewmodel.
 	\end{itemize}
 
@@ -1058,7 +1058,7 @@ Die Klasse stellt die Ansicht von ListenAndPerform während eines laufenden Trai
 	\item[+] \textbf{Stop: Button} \\ Button um den Trainingsvorgang zu stoppen. Feuert den StopActivityCommand aus dem Viewmodel.
 	\end{itemize}
 	
-\subsection{Class MusicModePage}
+\subsection{Class MusicModeAllPage}
 \paragraph{Klassenbeschreibung:}
 Die Klasse stellt die komplette Ansicht des Musicmodes dar. Beim Starten des Musikvorgang wird zu keiner Page gewechselt.
 \paragraph{Attribute:}
