Beschreibung lokale Datenbank hinzugefügt
- Beschreibung lokale Datenbank hinzugefügt
- Glossareintrag SQLite hinzugefügt

--- a/Entwurf/Entwurfsdokument/Glossar.tex
+++ b/Entwurf/Entwurfsdokument/Glossar.tex
@@ -13,6 +13,8 @@
 \newglossaryentry{Vorgangsdaten}{name=Vorgangsdaten, description={Daten, die bei der Ausführung eines Vorgangs gespeichert werden (z.B. Schritte, Sit-ups,\dots).}}
 \newglossaryentry{Datenbank}{name={Datenbank},
 	description={Die Datenbank speichert die Trainingsdaten in Form von DBEntries. Dabei wird die Datenbank von dem Plugin SQLite benutzt.}}
+\newglossaryentry{SQLite}{name={SQLite},
+	description={SQLite ist eine Erweiterung, mit der man lokale Datenbanken ansprechen und verwalten kann. Diese Erweiterung wird für die Speicherung der Trainignsdaten benutzt.}}
 \newglossaryentry{CSV}{name={CSV},
 	description={CSV steht für "Comma-Seperated-Value" ein Dateityp, bei dem die Attribute durch ein Komma getrennt werden. Eine Zeile bildet dabei immer einen Eintrag ab. Das Format ist human-readable und veränderbar.}}
 \newglossaryentry{Rg.Plugins.Popup}{name={Rg.Plugins.Popup},
