--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -94,7 +94,7 @@ In diesem Dokument wird der Entwurf der \Gls{CPB}, des Erweiterungsmoduls und de
 	\subsection{Architekturdiagramm}
 	\begin{center}
 		\vspace{100px}
-		\includegraphics[width=0.8\textwidth]{./Diagramme/Achi5.png}
+		\includegraphics[width=0.8\textwidth]{./Diagramme/Architekturdiagramm mit ServiceManager.png}
 	\end{center}
 	\clearpage %%sieht sonst noch zerrissener aus;    Gehts nicht irgendwie schöner? Sodass das Diagramm ganz oben quasi anliegt?
 	\subsection{Kurze Erläuterung zum Architekturdiagramm}
