--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -1273,17 +1273,17 @@ Nun kann man in den graphischen Komponenten den Titel oder Ähnliches eine stati
 Zum Beispiel kann man ein Label wie folgt deklarieren:\\\textit{<Label Text="{x:Static resource:AppResources.StepsDone}>}\\ StepsDone ist dabei der Bezeichner für die Beschriftung.
 Es werden folgende drei .resx Dateien gespeichert: 
 \begin{itemize}
-	\item[] \textbf{AppResources.resx}\\Hierbei handelt es sich um die Standardsprache. In dem Fall der App ist es Englisch.
-	\item[] \textbf{AppResources.de.resx}\\Hierbei handelt es sich um die Deutsche Übersetzung der Beschriftungen.
-	\item[] \textbf{AppResources.en.resx}\\Hierbei handelt es sich um die Englische Übersetzung der Beschriftungen.
+	\item \textbf{AppResources.resx}\\Hierbei handelt es sich um die Standardsprache. In dem Fall der App ist es Englisch.
+	\item \textbf{AppResources.de.resx}\\Hierbei handelt es sich um die Deutsche Übersetzung der Beschriftungen.
+	\item \textbf{AppResources.en.resx}\\Hierbei handelt es sich um die Englische Übersetzung der Beschriftungen.
 \end{itemize}
 
 \subsection{lokale Datenbank}
 Die Applikation besitzt eine lokale \gls{Datenbank} zur Speicherung der Trainingsdaten. Dabei ist diese immer am gleichen Pfad zu finden. Die Datenbank wird mit der Erweiterung \gls{SQLite} erstellt und verwaltet. Die Datenbank speichert die Trainingsdaten humanreadable. Man kann die Daten entsprechend in der Datei lesen; sie sind nicht verschlüsselt. In der Datenbank werden Instanzen der Klasse DBEntry gespeichert. Dafür wird nur eine Tablle benötigt. Die Tabelle sieht wie folgt aus:
 
 \begin{itemize}
-	\item[] \textbf{PrimaryKey Date: DateTime}\\Eindeutiger Bezeichner für jeden Datenbankeintrag. Gespeichert wird das Datum.
-	\item[] \textbf{Dictionary: string}\\Attribute des Datenbankeintrag. Für die Modularität wird hier eine Art Dictionary gespeichert. Es enthält die Attribute in einem \gls{CSV}-Format. Dieses Format wird in der statischen Methode parseDBEntry() interpretiert. Beispieleintrag:\\ \textit{'PushUps=12,SitUps=19,Steps=276'}
+	\item \textbf{PrimaryKey Date: DateTime}\\Eindeutiger Bezeichner für jeden Datenbankeintrag. Gespeichert wird das Datum.
+	\item \textbf{Dictionary: string}\\Attribute des Datenbankeintrag. Für die Modularität wird hier eine Art Dictionary gespeichert. Es enthält die Attribute in einem \gls{CSV}-Format. Dieses Format wird in der statischen Methode parseDBEntry() interpretiert. Beispieleintrag:\\ \textit{'PushUps=12,SitUps=19,Steps=276'}
 \end{itemize}
  
 \subsection{App Properties}
@@ -1291,11 +1291,23 @@ In den App Properties werden die App Einstellungen gespeichert. Die Klasse Setti
 Die Klasse SettingsService benutzt die Properties Klasse und regelt die korrekte Setzung der Einstellungen. Dabei können nur Objekte gespeichert werden, welche durch primitive Datentypen beschrieben werden können. Komplexere Datenstrukturen müssen zunächst in einen string umgewandelt werden, um gespeichert zu werden. Dies wird zum Beispiel mit der Klasse User gemacht, wo die ToString() Methode überschrieben wird, um alles darzustellen. Es existiert dem entsprechend auch die statische Methode ParseUser() in der Klasse User, welche einen string zu einer User-Instanz umwandelt.
 \\In den App Properties werden folgende Eigenschaften gespeichert:
 \begin{itemize}
-	\item[] \textbf{ActiveLanguage: CultureInfo}\\Die aktuelle Sprache in Form einer CultureInfo. Dabei hat jede Sprache einen eindeutigen Bezeichner, welcher gespeichert wird. (Deutsch='de-DE', Englisch='en-US').
-	\item[] \textbf(SamplingRate: SamplingRate)\\Die aktuelle Samplingrate der \Gls{Earables}. Diese wird als Integer gespeichert. Dieser ist der Wert im Enum SamplingRate.
-	\item[] \textbf{user: User}\\Der aktuelle Nutzer. Dabei wird die Nutzername gespeichert und die Schrittlänge. Der User ist modular, es können noch mehr Attribute ergänzt werden.  Wie beschrieben wird der User als String gespeichert, welcher geparst werden kann.
+	\item \textbf{ActiveLanguage: CultureInfo}\\Die aktuelle Sprache in Form einer CultureInfo. Dabei hat jede Sprache einen eindeutigen Bezeichner, welcher gespeichert wird.\\ (Deutsch='de-DE', Englisch='en-US').
+	\item \textbf{SamplingRate: SamplingRate}\\Die aktuelle Samplingrate der \Gls{Earables}. Diese wird als Integer gespeichert. Dieser ist der Wert im Enum SamplingRate.
+	\item \textbf{User: User}\\Der aktuelle Nutzer. Dabei wird die Nutzername gespeichert und die Schrittlänge. Der User ist modular, es können noch mehr Attribute ergänzt werden.  Wie beschrieben wird der User als String gespeichert, welcher geparst werden kann.
 \end{itemize}
+
+
 \subsection{Plug-ins}
+In der App werden mehrere Erweiterungen benutzt, welche eine Funktionalität bereit stellen. Diese Erweiterungen kann man über den PlugIn-Manger \Gls{NuGet} heruntergeladen und eingebunden werden. \\
+Es werden folgende Erweiterungen benötigt:\\
+\begin{itemize}
+	\item \textbf{\Gls{Bluetooth LE Plugin}}\\Diese Erweiterung ermöglicht es die Verbindung mit den \Gls{Earables} herzustellen. Zudem wird die Kommunikation zwischen Device und \Gls{Earables} geregelt. Von dieser Erweiterung erhalten wir die \Gls{IMU}-Daten.
+	\item \textbf{\Gls{DependencyInjection}}\\Microsoft.Extensions.DependencyInjection ist eine Erweiterung, welches ermöglicht Komponenten als Services zu registrieren und sie somit abgekapselt und modularer zu betrachten. Mit Klassen, wie der ServiceCollection, oder dem ServiceProvicer, bietet die Erweiterung Microsoft.Extensions.DependencyInjection das Framework.
+	\item \textbf{\Gls{Xamarin.Essentials}}\\Die Erweiterung Xamarin.Essentials ermöglicht einem, Devicespezifische Services anzusprechen. Benutzt wird hiervon die Funktion \Gls{TTS}. 
+	\item \textbf{\Gls{SQLite}}\\SQLite-net-pcl basiert auf dem PlugIn SQLite und ist eine portable Version für die Arbeit mit einer SQLite Datenbank. Dabei ist SQLite eine Erweiterung, mit der man lokale Datenbanken ansprechen und verwalten kann. Dabei bietet die Erweiterung eine lokale Datenbank platformunabhängig gleich anzusprechen. Diese Erweiterung wird für die Speicherung der Trainingsdaten benutzt.
+	\item \textbf{\Gls{Rg.Plugins.Popup}}\\Rg.Plugins.Popup ist eine Erweiterung (Plugin), welche es einem ermöglicht Pop-up Fenster mit mehr Logik als ein DisplayAlert zu erstellen und anzuzeigen.
+	\item \textbf{\Gls{Xamarin.Plugin.Filepicker}}\\Die Erweiterung Xamarin.Plugin.Filepicker ergänzt die Funktionalität eines Dateiauswähler. Mit diesem kann man in den Dateimanager des Devices und Dateien auswählen. Gebraucht wird dies beim Importieren und Exportieren der Trainingsdaten.
+\end{itemize}
 
 \section{Klassenindex}
 %macht valle ganz am Ende oder wir lassen es weg
